starter_kit/blif_parser.output
State 15 conflicts: 1 shift/reduce
State 22 conflicts: 2 shift/reduce


Grammar

    0 $accept: blif_circuit $end

    1 blif_circuit: models

    2 models: model
    3       | models model

    4 model: header input_declaration output_declaration function_list footer

    5 header: TOKEN_MODEL TOKEN_STRING

    6 footer: %empty
    7       | TOKEN_END

    8 input_declaration: %empty
    9                  | TOKEN_INPUT signal_list

   10 output_declaration: %empty
   11                   | TOKEN_OUTPUT signal_list

   12 function_list: function_list single_function
   13              | single_function
   14              | %empty

   15 single_function: function_declaration cube_statements

   16 function_declaration: TOKEN_NAMES signal_list

   17 cube_statements: %empty
   18                | cube_statement
   19                | cube_statements cube_statement

   20 cube_statement: TOKEN_CUBE_STRING TOKEN_CUBE_VALUE
   21               | TOKEN_CUBE_VALUE

   22 signal_list: signal
   23            | signal_list signal
   24            | signal_list TOKEN_LINE_BREAK signal

   25 signal: TOKEN_STRING


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_MODEL (258) 5
TOKEN_NAMES (259) 16
TOKEN_INPUT (260) 9
TOKEN_OUTPUT (261) 11
TOKEN_END (262) 7
TOKEN_CUBE_STRING (263) 20
TOKEN_CUBE_VALUE (264) 20 21
TOKEN_STRING (265) 5 25
TOKEN_LINE_BREAK (266) 24


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
blif_circuit (13)
    on left: 1, on right: 0
models (14)
    on left: 2 3, on right: 1 3
model (15)
    on left: 4, on right: 2 3
header (16)
    on left: 5, on right: 4
footer (17)
    on left: 6 7, on right: 4
input_declaration (18)
    on left: 8 9, on right: 4
output_declaration (19)
    on left: 10 11, on right: 4
function_list (20)
    on left: 12 13 14, on right: 4 12
single_function (21)
    on left: 15, on right: 12 13
function_declaration (22)
    on left: 16, on right: 15
cube_statements (23)
    on left: 17 18 19, on right: 15 19
cube_statement (24)
    on left: 20 21, on right: 18 19
signal_list (25)
    on left: 22 23 24, on right: 9 11 16 23 24
signal (26)
    on left: 25, on right: 22 23 24


State 0

    0 $accept: . blif_circuit $end

    TOKEN_MODEL  shift, and go to state 1

    blif_circuit  go to state 2
    models        go to state 3
    model         go to state 4
    header        go to state 5


State 1

    5 header: TOKEN_MODEL . TOKEN_STRING

    TOKEN_STRING  shift, and go to state 6


State 2

    0 $accept: blif_circuit . $end

    $end  shift, and go to state 7


State 3

    1 blif_circuit: models .
    3 models: models . model

    TOKEN_MODEL  shift, and go to state 1

    $default  reduce using rule 1 (blif_circuit)

    model   go to state 8
    header  go to state 5


State 4

    2 models: model .

    $default  reduce using rule 2 (models)


State 5

    4 model: header . input_declaration output_declaration function_list footer

    TOKEN_INPUT  shift, and go to state 9

    $default  reduce using rule 8 (input_declaration)

    input_declaration  go to state 10


State 6

    5 header: TOKEN_MODEL TOKEN_STRING .

    $default  reduce using rule 5 (header)


State 7

    0 $accept: blif_circuit $end .

    $default  accept


State 8

    3 models: models model .

    $default  reduce using rule 3 (models)


State 9

    9 input_declaration: TOKEN_INPUT . signal_list

    TOKEN_STRING  shift, and go to state 11

    signal_list  go to state 12
    signal       go to state 13


State 10

    4 model: header input_declaration . output_declaration function_list footer

    TOKEN_OUTPUT  shift, and go to state 14

    $default  reduce using rule 10 (output_declaration)

    output_declaration  go to state 15


State 11

   25 signal: TOKEN_STRING .

    $default  reduce using rule 25 (signal)


State 12

    9 input_declaration: TOKEN_INPUT signal_list .
   23 signal_list: signal_list . signal
   24            | signal_list . TOKEN_LINE_BREAK signal

    TOKEN_STRING      shift, and go to state 11
    TOKEN_LINE_BREAK  shift, and go to state 16

    $default  reduce using rule 9 (input_declaration)

    signal  go to state 17


State 13

   22 signal_list: signal .

    $default  reduce using rule 22 (signal_list)


State 14

   11 output_declaration: TOKEN_OUTPUT . signal_list

    TOKEN_STRING  shift, and go to state 11

    signal_list  go to state 18
    signal       go to state 13


State 15

    4 model: header input_declaration output_declaration . function_list footer

    TOKEN_NAMES  shift, and go to state 19

    TOKEN_NAMES  [reduce using rule 14 (function_list)]
    $default     reduce using rule 14 (function_list)

    function_list         go to state 20
    single_function       go to state 21
    function_declaration  go to state 22


State 16

   24 signal_list: signal_list TOKEN_LINE_BREAK . signal

    TOKEN_STRING  shift, and go to state 11

    signal  go to state 23


State 17

   23 signal_list: signal_list signal .

    $default  reduce using rule 23 (signal_list)


State 18

   11 output_declaration: TOKEN_OUTPUT signal_list .
   23 signal_list: signal_list . signal
   24            | signal_list . TOKEN_LINE_BREAK signal

    TOKEN_STRING      shift, and go to state 11
    TOKEN_LINE_BREAK  shift, and go to state 16

    $default  reduce using rule 11 (output_declaration)

    signal  go to state 17


State 19

   16 function_declaration: TOKEN_NAMES . signal_list

    TOKEN_STRING  shift, and go to state 11

    signal_list  go to state 24
    signal       go to state 13


State 20

    4 model: header input_declaration output_declaration function_list . footer
   12 function_list: function_list . single_function

    TOKEN_NAMES  shift, and go to state 19
    TOKEN_END    shift, and go to state 25

    $default  reduce using rule 6 (footer)

    footer                go to state 26
    single_function       go to state 27
    function_declaration  go to state 22


State 21

   13 function_list: single_function .

    $default  reduce using rule 13 (function_list)


State 22

   15 single_function: function_declaration . cube_statements

    TOKEN_CUBE_STRING  shift, and go to state 28
    TOKEN_CUBE_VALUE   shift, and go to state 29

    TOKEN_CUBE_STRING  [reduce using rule 17 (cube_statements)]
    TOKEN_CUBE_VALUE   [reduce using rule 17 (cube_statements)]
    $default           reduce using rule 17 (cube_statements)

    cube_statements  go to state 30
    cube_statement   go to state 31


State 23

   24 signal_list: signal_list TOKEN_LINE_BREAK signal .

    $default  reduce using rule 24 (signal_list)


State 24

   16 function_declaration: TOKEN_NAMES signal_list .
   23 signal_list: signal_list . signal
   24            | signal_list . TOKEN_LINE_BREAK signal

    TOKEN_STRING      shift, and go to state 11
    TOKEN_LINE_BREAK  shift, and go to state 16

    $default  reduce using rule 16 (function_declaration)

    signal  go to state 17


State 25

    7 footer: TOKEN_END .

    $default  reduce using rule 7 (footer)


State 26

    4 model: header input_declaration output_declaration function_list footer .

    $default  reduce using rule 4 (model)


State 27

   12 function_list: function_list single_function .

    $default  reduce using rule 12 (function_list)


State 28

   20 cube_statement: TOKEN_CUBE_STRING . TOKEN_CUBE_VALUE

    TOKEN_CUBE_VALUE  shift, and go to state 32


State 29

   21 cube_statement: TOKEN_CUBE_VALUE .

    $default  reduce using rule 21 (cube_statement)


State 30

   15 single_function: function_declaration cube_statements .
   19 cube_statements: cube_statements . cube_statement

    TOKEN_CUBE_STRING  shift, and go to state 28
    TOKEN_CUBE_VALUE   shift, and go to state 29

    $default  reduce using rule 15 (single_function)

    cube_statement  go to state 33


State 31

   18 cube_statements: cube_statement .

    $default  reduce using rule 18 (cube_statements)


State 32

   20 cube_statement: TOKEN_CUBE_STRING TOKEN_CUBE_VALUE .

    $default  reduce using rule 20 (cube_statement)


State 33

   19 cube_statements: cube_statements cube_statement .

    $default  reduce using rule 19 (cube_statements)
